--- a/wd-sched-style.css
+++ b/wd-sched-style.css
@@ -42,21 +42,21 @@ hr.bold-gray {
   border-style: solid;
 }
 
-/*Background color for current TA*/
+/*Background color red for current TA*/
 .ta-padng-prsnt {
   background: transparent;
   padding: 35px;
   background-color: #ff6961;
 }
 
-/*Background color for past TA*/
+/*Background color gray for past TA*/
 .ta-padng-past {
   padding: 35px;
   background-color: #d3d3d3;
   color: white;
 }
 
-/*Background color for future TA*/
+/*Background color green for future TA*/
 .ta-padng-fut {
   padding: 35px;
   background-color: #77dd77;
